读加入写分离

--- a/resources/myjdbc.properties
+++ b/resources/myjdbc.properties
@@ -5,11 +5,25 @@ redis.maxWaitMillis=-1
 redis.testOnBorrow=false
 redis.host=localhost
 redis.port=6379
-#表缓存策略，持久化缓存1，默认redis淘汰算法缓存2，不缓存0
-#
+#--------------------------------------
+#表缓存策略，1持久化缓存，2带过期时间的缓存（默认缓存时间为一年），0不缓存
 #缓存策略规则说明：缓存策略编号.数据源名.表名
+#--------------------------------------
 tableCache=1.test.user,2.test.student
 
-
+#--------------------------------
+#myjdbc相关配置
+#--------------------------------
 isPrintSqlLog=true
 isSQLCache=true
+
+#--------------------------------------
+#数据库读写分离配置，数数据源名，每个库都必须有一个对应的数据源链接并设置name，这里也只需要设置name
+#设置备份数据库，当且仅当主写数据库挂了之后才会启用backup配置的数据库
+#--------------------------------------
+#轮询写
+writeDB=testWrite1
+backupWriteDB=testWrite2
+#轮询读
+readDB=testRead1
+backupReadDB=testRead2
